# video-ml-training

./: .gitignore  README.md  args.py  epoch_eval.py  epoch_train.py  pyproject.toml  run_distributed.py  run_training.py  utils.py
datasets/: k400tiny.py
example_data/: k400tiny_groundtruth.csv
util_scripts/: make_datasplit.py
